--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
-    "@ng-select/ng-select": "^3.0.7",
+    "@ng-select/ng-select": "^3.7.1",
     "@types/jest": "^24.0.18",
+    "ag-grid-angular": "^22.1.1",
+    "ag-grid-community": "^22.1.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.9",
