--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^24.0.18",
     "ag-grid-angular": "^22.1.1",
     "ag-grid-community": "^22.1.1",
+    "angular-crumbs": "^3.0.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.9",
