--- a/package.json
+++ b/package.json
@@ -45,9 +45,8 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@ng-select/ng-select": "^3.7.1",
+    "@swimlane/ngx-datatable": "^16.0.3",
     "@types/jest": "^24.0.18",
-    "ag-grid-angular": "^22.1.1",
-    "ag-grid-community": "^22.1.1",
     "angular-crumbs": "^3.0.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
@@ -61,7 +60,6 @@
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.0.0",
     "ngx-cookie-service": "^2.2.0",
-    "ngx-pagination": "^4.1.0",
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "^6.5.2",
     "simple-line-icons": "^2.4.1",
