WIP: Implement JWT token refresh logic
This commit also includes:
* Fix to show checkbox for the "enabled" field on both the house and the comments list views
* Feature to show the preview of an already saved house in the main website

--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.0.0",
+    "ngx-checkbox": "0.0.8",
     "ngx-cookie-service": "^2.2.0",
     "ngx-perfect-scrollbar": "^8.0.0",
+    "ngx-spinner": "^8.1.0",
     "rxjs": "^6.5.2",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
