--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "@coreui/coreui-free-angular-admin-template",
-  "version": "2.5.2",
-  "description": "CoreUI Free Angular 2+ Admin Template",
+  "name": "manager.rent.cu",
+  "version": "0.1.0",
   "author": {
-    "name": "Łukasz Holeczek",
-    "url": "http://holeczek.pl",
-    "github": "https://github.com/mrholek",
-    "twitter": "https://twitter.com/lukaszholeczek"
+    "name": "Osmany Torres Leyva",
+    "github": "https://github.com/manytostao",
+    "twitter": "https://twitter.com/manytostao"
   },
   "contributors": [
     {
-      "name": "Andrzej Kopański",
-      "url": "https://github.com/xidedix"
+      "name": "Felix Iván Romero Rodríguez",
+      "twitter": "https://twitter.com/kaffekolor"
     }
   ],
-  "homepage": "https://coreui.io/angular",
-  "copyright": "Copyright 2019 creativeLabs Łukasz Holeczek",
-  "license": "MIT",
+  "homepage": "http://rent.cu",
+  "copyright": "Copyright 2020 Codechanic",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -37,6 +34,7 @@
     "@angular/core": "^8.0.2",
     "@angular/forms": "^8.0.2",
     "@angular/http": "^8.0.0-beta.10",
+    "@angular/localize": "^9.1.0",
     "@angular/platform-browser": "^8.0.2",
     "@angular/platform-browser-dynamic": "^8.0.2",
     "@angular/router": "^8.0.2",
