--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "setupTestFrameworkScriptFile": "<rootDir>/setupJest.ts"
   },
   "dependencies": {
-    "@angular/animations": "^9.1.3",
+    "@angular/animations": "^9.1.9",
     "@angular/common": "^9.1.3",
     "@angular/compiler": "^9.1.3",
     "@angular/core": "^9.1.3",
@@ -43,6 +43,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@ng-select/ng-select": "^3.7.1",
+    "@ngx-gallery/core": "^5.0.0-beta.0",
     "@swimlane/ngx-datatable": "^16.0.3",
     "@types/jest": "^24.0.18",
     "angular-crumbs": "^3.0.1",
