--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --aot --buildOptimizer --commonChunk --vendorChunk --optimization --progress",
+    "build:dev": "ng build",
     "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e"
